--- a/manifest.json
+++ b/manifest.json
@@ -3,8 +3,11 @@
   "description": "Skeleton for building Chrome extensions",
   "version": "1.0",
   "manifest_version": 3,
+  "permissions": [
+    "sidePanel"
+  ],
   "action": {
-    "default_popup": "popup.html",
-    "default_icon": "./icons/extension.svg"
+    "default_popup": "./popup/popup.html",
+    "default_icon": "./img/svg/extension.svg"
   }
 }
