--- a/manifest.json
+++ b/manifest.json
@@ -1,18 +1,11 @@
 {
-  "name": "Extension Template",
-  "description": "Skeleton for building Chrome extensions",
+  "name": "NewTab",
+  "description": "Customized new tab for Chrome",
   "version": "1.0",
   "manifest_version": 3,
-  "permissions": [
-    "sidePanel", "tabs", "storage"
-  ],
-  "action": {
-    "default_title": "Click to test action",
-    "default_popup": "./ui/popup/popup.html",
-    "default_icon": "./img/svg/extension.svg"
-  },
-  "side_panel": {
-    "default_path": "./ui/sidepanel/sidepanel.html"
+  "permissions": ["tabs"],
+  "chrome_url_overrides": {
+    "newtab": "./ui/tab/tab.html"
   },
   "background": {
     "service_worker": "./js/worker.js"
